# file_comparison

./: .gitignore  README.md  parsed_data.xlsx  pyproject.toml
src/: main.py
src/app/api/endpoints/: csv.py  docx.py  excel.py  pdf.py
src/app/core/: config.py  logging.py
src/app/schemas/: models.py
src/app/services/: check_diff.py  check_similarity.py  methods.py  read_file.py  summerizer.py  wrap_methods.py
src/app/static/css/: custom.css
src/app/static/js/: app.js
src/app/templates/: index.html
src/app/utils/: dependencies.py
